variables.Variables.scala.error
Erreur de compilation :
Variables:21: error: not found: value posebiscuit
posebiscuit() 
^